# django-activitypub

./: .gitignore  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
django_activitypub/: admin.py  apps.py  custom_markdown.py  models.py  signed_requests.py  test_webfinger.py  urls.py  views.py  webfinger.py
django_activitypub/migrations/: 0001_initial.py
django_activitypub/static/pub/style/: pub.css
django_activitypub/templates/pub/: activity.html  static.html
django_activitypub/templatetags/: pub_extras.py
django_activitypub/utils/: dates.py  test_dates.py
example/example/: settings.py  urls.py
scripts/: makemigrations.py  setup.py  test.py
