[metadata]
name = django-activitypub
version = 0.0.1
description = A Django app implementing the ActivityPub protocol
long_description = file: README.rst
url = https://sam.sutch.net/projects/django-activitypub
author = Samuel Sutch
author_email = sam@sutch.net
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    django >= 4.2
    cryptography >= 41.0.0
    requests >= 2.31.0
    Markdown >= 3.5.0
    django-tree-queries >= 0.16.1
    html-sanitizer >= 2.2.0
